2003-04-09   Manuel Guesdon <mguesdon@orange-concept.com> 	* GSWAdaptors/common/GSWUtils.c: 		o prefix logs with GSWeb[pid] 	* GSWAdaptors/common/GSWAppRequest.c: 		o improved logs 	* GSWApp.c/.h: 		o add instance handled request count and no response count 	* GSWConfig.c: 		o remove "GSWeb:" prefix in logs 		o initialize 	* GSWApp.h: 		o renamed instance index 	* GSWLoadBalancing.c: 		o logs
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16407 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,19 @@
 2003-04-09   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWAdaptors/common/GSWUtils.c:
+		o prefix logs with GSWeb[pid]
+	* GSWAdaptors/common/GSWAppRequest.c:
+		o improved logs
+	* GSWApp.c/.h:
+		o add instance handled request count and no response count
+	* GSWConfig.c:
+		o remove "GSWeb:" prefix in logs
+		o initialize 
+	* GSWApp.h:
+		o renamed instance index
+	* GSWLoadBalancing.c:
+		o logs
+	
+2003-04-09   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb.framework/GSWSessionTimeOut.m:
 		o fix in -description
 	* GSWeb.framework/GSWApplication.m:
