* GSWeb.framework/GSWUtils.m ([NSUserDefaults -description]): 	Remove reference to instance variable, that has been removed from 	-base.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16833 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-29  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GSWUtils.m ([NSUserDefaults -description]):
+	Remove reference to instance variable, that has been removed from
+	-base.
+
 2003-05-14   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb.framework/GSWRequest.h/.m:
 		o added ivar _browserAcceptedEncodings
