--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-26   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb.framework/GSWDisplayGroup.h:
+		o include EODeprecated.h instead of EOUndoManager.h
+
 2003-06-25   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWAdaptors/common/GSWHTTPHeaders.h/.m:
 		o added g_szHeader_GSWeb_ApplicationName
