--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-25  David Ayers  <d.ayers@inode.at>
+
+	* *.h/m: Updated to new header layout.
+	
 2003-07-11  David Ayers  <d.ayers@inode.at>
 
 	* INSTALL: Update prerequisits and installation guidelines.
