* GSWeb.framework/GNUmakefile 	* GSWExtensions.framework/GNUmakefile 	* GSWExtensionsGSW.framework/GNUmakefile: Update for 	GNUSTEP_BUILD_DIR changes in -make.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18069 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-09  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GNUmakefile
+	* GSWExtensions.framework/GNUmakefile
+	* GSWExtensionsGSW.framework/GNUmakefile: Update for
+	GNUSTEP_BUILD_DIR changes in -make.
+
 2003-10-22  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWAssociation.m: Include limits.h and float.h
