*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18191 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-25   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb.framework/GSWInputStreamData.m/.h:
+		o added
+
 2003-11-24   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb.framework/GSWResourceManager.m/.h:
 		o added -cachedBundleForFrameworkNamed:
