--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2003-11-25   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb.framework/GSWUtils.h:
+		o quick fixes for NeXT_Foundation from Philip Moetteli <Philip.Moetteli@tele2.ch>
+
+2003-11-25   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb.framework/GSWeb.h:
 		o included GSWActionURL.h
 	* GSWExtensions.framework/GSWKeyValueConditional.*:
