fix for wo names
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18275 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-25   David Wetzel <dave@turbocat.de>
+        * GSWeb.framework: GSWApplication.m GSWConstants.h GSWConstants.m
+          Added GSWClassName_ResourceManager, GSWClassName_StatisticsStore,
+          GSWClassName_ServerSessionStore
+          Joined broken lines with string constants in GSWApplication.m
+
 2003-11-26   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb.framework/GSWRecording.m:
 		o fix in -_wildcardedResponse:
